--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "test-frontend"]
-	path = test-frontend
+[submodule "frontend"]
+	path = frontend
 	url = https://github.com/seapeng/test-frontend.git
-[submodule "test-backend"]
-	path = test-backend
+[submodule "backend"]
+	path = backend
 	url = https://github.com/seapeng/test-backend.git
