--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
             pwd
             ls
             cd /var/www/devops-deploy
-            git pull
+            git submodule update --init --recursive
