--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           host: 178.18.254.89
           username: root
-          password: hD5H9Mf5kwci
+          key: ${{ secrets.SSH_KEY }}
           script: |
             . ~/.nvm/nvm.sh
             whoami
